--- a/ChistesAPI_DB/appsettings.json
+++ b/ChistesAPI_DB/appsettings.json
@@ -11,8 +11,12 @@
 
 
   "ConnectionStrings": {
-    "conexion":"server=BROUKEN; database=ApiReplace; integrated security=true; TrustServerCertificate=Yes;"
+    "conexion": "server=BROUKEN; database=ApiReplace; integrated security=true; TrustServerCertificate=Yes;"
+  },
+
+  "env": {
+    "ASPNETCORE_ENVIRONMENT": "Development"
   }
-  }
+}
     
 
